[package]
name = "async-lock"
# When publishing a new version:
# - Update CHANGELOG.md
# - Create "v3.x.y" git tag
version = "3.3.0"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2021"
rust-version = "1.60"
description = "Async synchronization primitives"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/async-lock"
keywords = ["lock", "mutex", "rwlock", "semaphore", "barrier"]
categories = ["asynchronous", "concurrency"]
exclude = ["/.*"]

[dependencies]
event-listener = { version = "5.0.0", default-features = false }
event-listener-strategy = { version = "0.5.0", default-features = false }
pin-project-lite = "0.2.11"
portable-atomic-util = { version = "0.1.4", default-features = false, optional = true, features = ["alloc"] }

[dependencies.portable_atomic_crate]
package = "portable-atomic"
version = "1.2.0"
default-features = false
optional = true

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", optional = true }

[features]
default = ["std"]
portable-atomic = ["portable-atomic-util", "portable_atomic_crate"]
std = ["event-listener/std", "event-listener-strategy/std"]
loom = ["event-listener/loom", "dep:loom"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[dev-dependencies]
async-channel = "2.2.0"
fastrand = "2.0.0"
futures-lite = "2.0.0"
waker-fn = "1.1.0"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3"
