[package]
name = "async-barrier"
version = "1.1.0"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
description = "An async barrier"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/stjepang/async-lock"
homepage = "https://github.com/stjepang/async-lock"
documentation = "https://docs.rs/async-barrier"
keywords = ["rendezvous", "sync", "async", "synchronize", "synchronization"]
categories = ["asynchronous", "concurrency"]
readme = "../README.md"

[dependencies]
async-mutex = { path = "../async-mutex", version = "1.4.0" }
event-listener = "2.4.0"

[dev-dependencies]
async-channel = "1.4.1"
futures-lite = "1.0.0"
