[package]
name = "async-mutex"
version = "1.4.1"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
description = "Async mutex"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/stjepang/async-lock"
homepage = "https://github.com/stjepang/async-lock"
documentation = "https://docs.rs/async-mutex"
keywords = ["asynchronous", "mutex", "lock", "synchronization"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"

[dependencies]
event-listener = "2.0.0"

[dev-dependencies]
async-executor = "1.3.0"
async-io = "1.1.2"
futures = "0.3.5"
futures-intrusive = "0.3.1"
futures-lite = "1.0.0"
num_cpus = "1.13.0"
once_cell = "1.4.1"
tokio = { version = "0.2.21", features = ["sync", "parking_lot"] }
