[package]
name = "async-rwlock"
version = "1.2.1"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
description = "Async reader-writer lock"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/stjepang/async-lock"
homepage = "https://github.com/stjepang/async-lock"
documentation = "https://docs.rs/async-rwlock"
keywords = ["asynchronous", "rwlock", "mutex", "lock", "synchronization"]
categories = ["asynchronous", "concurrency"]
readme = "../README.md"

[dependencies]
async-mutex = "1.1.5"
event-listener = "2.4.0"

[dev-dependencies]
async-channel = "1.4.1"
fastrand = "1.3.4"
futures-lite = "1.0.0"
